--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.0.0",
+    "@react-stately/data": "^3.10.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/react-table": "^8.9.3",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.8.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
+    "framer-motion": "^10.15.0",
     "mongodb": "^5.7.0",
     "next": "13.4.11",
     "postcss": "8.4.26",
+    "primereact": "^9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
